Alteração geral e links

--- a/Empresa4.html
+++ b/Empresa4.html
@@ -46,9 +46,9 @@
 					<a href="cliente.html" class="botao">Ver todos &raquo;</a>
 				</div>
 				<div class="coluna col9">
-					<h2>Último trabalho <em> Empresa ABC</em></h2>
+					<h2>Último trabalho <em> Empresa 4</em></h2>
 					<img src="img/thumb-grande.jpg" alt=""/>
-						<p>Empresa de salgados me procurou para fazer este site <a href="../primeiro layout-absorção/prog.html" class="linksite">Delidrics</a>,empresa distruibuidora de salgados congelados,e tambem produz festa.</p>
+						<p>Non est magicae primus gradus ad consequi: et pre-intellectum. Solus bonam lectionem gradum. In praeter satis legere potes, si habes ad leverage Lectio dictionary prope est. Verbum quod vidit mirabilem, tu nescis? Accipere librum (separatum est quia pretium est), et ea scribere. Et itur ad dictionary et vide significatione iuxta verbum. Vocabulary erit crescere super dies tuos, et non erit precise</p>
 						<a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
 				</div>
 			</section>
