--- a/clientes.html
+++ b/clientes.html
@@ -34,44 +34,43 @@
 			<section>
 			<h2>veja quem já contratou nossos serviços</h2>
 			<div class="coluna col6">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa1"<h4>nome da empresa 1</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			<div class="coluna col6">
-				<h4>nome da empresa 2</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa2"<h4>nome da empresa 2</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			<div class="coluna col4">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa3"<h4>nome da empresa 3</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			<div class="coluna col4">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa4"<h4>nome da empresa 4</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			<div class="coluna col4">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa5"<h4>nome da empresa 5</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			<div class="coluna col4">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa6"<h4>nome da empresa 6</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
+			<div class="coluna col4">
+				<a href="empresa7"<h4>nome da empresa 7</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			<div class="coluna col4">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
-			</div>
-			<div class="coluna col4">
-				<h4>nome da empresa 1</h4>
-				<img src="img/thumb-grande.jpg" alt="">
-				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p>
+				<a href="empresa8"<h4>nome da empresa 8</h4>
+				<img src="img/thumb-grande.jpg" alt=""<a href=""/>
+				<p>Set illud quod a filo perforat vocum atque verborum interpretatio et patitur ut deferat nuntium. Quis enim est opus in originali poema vel scriptum, et libri scriptum est. A Ratione itaque habita linguae textus est maior unitas quam quantum damnationem.</p></a>
 			</div>
 			</section>
 		</div>
