--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
 						<ul class="sem-padding sem-marcador">
 							<li>Rua José Jorge,27</li>
 							<li>Bairro:Brás Cubas</li>
-							<li>Mogi das Cruze - SP</li>
+							<li>Mogi das Cruzes - SP</li>
 						</ul>
 						<h3>Contato direto</h3>
 						<ul class="sem-marcador sem-padding">
@@ -49,7 +49,7 @@
 					
 				</div>
 				<div class="coluna col7 contato">
-					<h2>Envie sua menssagem</h2>
+					<h2>Envie sua mensagem</h2>
 					<form action="">
 						<label for="nome">Seu nome</label>
 						<input type="text" name="nome" id="nome">
@@ -57,8 +57,8 @@
 						<input type="text" name="email" id="email">
 						<label for="assunto">Assunto</label>
 						<input type="text" name="assunto" id="assunto">
-						<label for="menssagem">Menssagem</label>
-						<textarea name="menssagem" id="menssagem"></textarea>
+						<label for="mensagem">Mensagem</label>
+						<textarea name="mensagem" id="mensagem"></textarea>
 						<input type="submit" class="botao" name="enviar" value="Enviar menssagem &raquo;">
 						
 					</form>
