--- a/sobre.html
+++ b/sobre.html
@@ -34,7 +34,7 @@
 			<section>
 				<div class="coluna col8">
 					<h2>Sobre mim</h2>
-					<p>Me chama Murilo Cardos,nasci em 1999 em uma cidade do interior de São Paulo.Começei na área eletrica como primeira profissão,acabei vindo para a area da WEB com ajuda do meu primo <a href="https://www.facebook.com/douglastomizawa" class="doug">Douglas Tomizawa</a></p>
+					<p>Me chamo Murilo Cardos, nasci em 1999 em uma cidade do interior de São Paulo.Começei na área eletrica como primeira profissão,acabei vindo para a area da WEB com ajuda do meu primo <a href="https://www.facebook.com/douglastomizawa" class="doug">Douglas Tomizawa</a></p>
 					<p>conheci a área de desolvimento na WEB em 2018,e com a ajuda do meu primo fui entrando na programação.</p>
 					<h2>Porque trabalho na WEB</h2>
 					<p>Qualquer empresa atualmente precisa de um site para sua divulgação e atenção de novos clientes.</p>
